--- a/app/src/main/res/layout/activity_edit_profil.xml
+++ b/app/src/main/res/layout/activity_edit_profil.xml
@@ -7,44 +7,16 @@
     android:orientation="vertical"
     tools:context=".Profil.EditProfilActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_menu"
-        android:background="#FF9800"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <include
+        layout="@layout/toolbar_second"
+        android:id="@+id/toolbar"/>
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|center_horizontal"
-                android:text="E-Rental "
-                android:textColor="@color/white"
-                android:textSize="@dimen/_17sdp"
-                android:textStyle="bold" />
-
-
-        </LinearLayout>
-    </androidx.appcompat.widget.Toolbar>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Edit Profil"
-        android:textSize="@dimen/_25sdp"
-        android:textColor="@color/black"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:gravity="center_horizontal"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="@dimen/_5sdp"
+        android:padding="@dimen/_15sdp"
         android:gravity="center">
         <EditText
             android:id="@+id/edt_namauser_register"
@@ -120,11 +92,11 @@
             android:textColorHint="@color/material_on_background_disabled"/>
     </LinearLayout>
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btn_update"
         android:text="Update "
-        android:layout_marginRight="@dimen/_10sdp"
+        android:layout_margin="@dimen/_10sdp"
         android:textColor="@color/white"
         android:layout_gravity="right"
         android:textColorHint="@color/material_on_background_disabled"/>
