--- a/app/src/main/res/layout/activity_pasang_sewa.xml
+++ b/app/src/main/res/layout/activity_pasang_sewa.xml
@@ -7,181 +7,125 @@
     android:orientation="vertical"
     tools:context=".Profil.PasangSewaActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_menu"
-        android:background="#FF9800"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|center_horizontal"
-                android:text="E-Rental "
-                android:textColor="@color/white"
-                android:textSize="@dimen/_17sdp"
-                android:textStyle="bold" />
+   <include
+       android:id="@+id/toolbar"
+       layout="@layout/toolbar_second"/>
 
 
-        </LinearLayout>
-    </androidx.appcompat.widget.Toolbar>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Pasang Sewa"
-        android:textSize="@dimen/_25sdp"
-        android:textColor="@color/black"
-        android:gravity="center_horizontal"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="@dimen/_5sdp"
-        android:layout_marginBottom="@dimen/_8sdp"
-        android:weightSum="2">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Nama Barang /Jasa"
-            android:textColor="@color/black"
-            android:layout_weight="1"/>
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/edt_namaBarang"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginRight="@dimen/_15sdp"
+            android:background="@drawable/edbg"
+            android:hint="Nama Barang /Jasa"
             android:inputType="text"
-            android:singleLine="true"
-            android:layout_weight="1"
-            android:textColor="@color/black"
-            android:textColorHint="@color/material_on_background_disabled"/>
-    </LinearLayout>
+            android:paddingLeft="@dimen/_5sdp"
+            android:paddingTop="@dimen/_5sdp"
+            android:paddingBottom="@dimen/_5sdp"
+            android:singleLine="true"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="@dimen/_5sdp"
-        android:layout_marginBottom="@dimen/_8sdp"
-        android:weightSum="2">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Kategori"
-            android:textColor="@color/black"
-            android:layout_weight="1"/>
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginRight="@dimen/_15sdp"
+            android:text="Kategori" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/edbg"
+        android:layout_marginLeft="@dimen/_15sdp"
+        android:layout_marginRight="@dimen/_15sdp">
         <Spinner
+            android:id="@+id/spinner_Kategori"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_30sdp"
+            android:paddingLeft="@dimen/_5sdp"
+            android:paddingTop="@dimen/_5sdp"
+            android:paddingBottom="@dimen/_5sdp"/>
+    </RelativeLayout>
+
+
+        <EditText
+            android:id="@+id/edt_tarif"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/spinner_Kategori"
-            android:layout_weight="1"/>
-    </LinearLayout>
+            android:hint="Tarif perHari"
+            android:background="@drawable/edbg"
+            android:paddingLeft="@dimen/_5sdp"
+            android:paddingTop="@dimen/_5sdp"
+            android:paddingBottom="@dimen/_5sdp"
+            android:singleLine="true"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginRight="@dimen/_15sdp"
+            android:inputType="text"/>
+
+
+        <EditText
+            android:id="@+id/edt_stokBarang"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Stok Barang"
+            android:background="@drawable/edbg"
+            android:paddingLeft="@dimen/_5sdp"
+            android:paddingTop="@dimen/_5sdp"
+            android:paddingBottom="@dimen/_5sdp"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginRight="@dimen/_15sdp"
+            android:inputType="text"/>
+
+        <EditText
+            android:id="@+id/edtdeskripsi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Deskripsi"
+            android:inputType="text"
+            android:background="@drawable/edbg"
+            android:paddingLeft="@dimen/_5sdp"
+            android:paddingTop="@dimen/_5sdp"
+            android:paddingBottom="@dimen/_5sdp"
+            android:layout_marginLeft="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginRight="@dimen/_15sdp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginLeft="@dimen/_5sdp"
         android:layout_marginBottom="@dimen/_8sdp"
+        android:orientation="horizontal"
         android:weightSum="2">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Tarif perHari"
-            android:textColor="@color/black"
-            android:layout_weight="1"/>
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/edt_tarif"
-            android:inputType="text"
-            android:singleLine="true"
             android:layout_weight="1"
-            android:textColor="@color/black"
-            android:textColorHint="@color/material_on_background_disabled"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="@dimen/_5sdp"
-        android:layout_marginBottom="@dimen/_8sdp"
-        android:weightSum="2">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Stok Barang"
-            android:textColor="@color/black"
-            android:layout_weight="1"/>
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/edt_stokBarang"
-            android:inputType="text"
-            android:singleLine="true"
-            android:layout_weight="1"
-            android:textColor="@color/black"
-            android:textColorHint="@color/material_on_background_disabled"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="@dimen/_5sdp"
-        android:layout_marginBottom="@dimen/_8sdp"
-        android:weightSum="2">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Deskripsi"
-            android:textColor="@color/black"
-            android:layout_weight="1"/>
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/edtdeskripsi"
-            android:inputType="text"
-            android:singleLine="true"
-            android:layout_weight="1"
-            android:textColor="@color/black"
-            android:textColorHint="@color/material_on_background_disabled"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="@dimen/_5sdp"
-        android:layout_marginBottom="@dimen/_8sdp"
-        android:weightSum="2">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:text="Gambar"
-            android:textColor="@color/black"
-            android:layout_weight="1"/>
+            android:textColor="@color/black"/>
         <EditText
+            android:id="@+id/edt_input_gambar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/edt_input_gambar"
             android:layout_weight="1"
             android:textColor="@color/black"
             android:textColorHint="@color/material_on_background_disabled"/>
     </LinearLayout>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/btn_sewa"
-        android:text="Pasang Sewa!"
-        android:layout_marginRight="@dimen/_10sdp"
-        android:textColor="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:textColorHint="@color/material_on_background_disabled"/>
+        android:layout_margin="@dimen/_15sdp"
+        android:text="Pasang Sewa!"
+        android:textColor="@color/white" />
 
 
 </LinearLayout>
