--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.ERental" parent="Theme.MaterialComponents.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#47ACFC</item>
-        <item name="colorPrimaryVariant">#2E3D60</item>
+        <item name="colorPrimaryVariant">@color/cardview_shadow_start_color</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/cardview_dark_background</item>
