--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,12 +3,12 @@
     <style name="Theme.ERental" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#47ACFC</item>
-        <item name="colorPrimaryVariant">@color/white</item>
+        <item name="colorPrimaryVariant">#47ACFC</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/white</item>
         <item name="colorSecondaryVariant">@color/shimmer_foreground</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">#47ACFC</item>
         <!-- Status bar color. -->
         <item name="android:windowBackground">@color/white</item>
         <item name="android:statusBarColor">@color/ui_day</item>
