--- a/app/src/main/res/layout/activity_detail_barang.xml
+++ b/app/src/main/res/layout/activity_detail_barang.xml
@@ -22,6 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|center_horizontal"
+                android:fontFamily="@font/quicksand_bold"
                 android:text="E-Rental "
                 android:textColor="@color/white"
                 android:textSize="@dimen/_17sdp"
