--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -7,29 +7,9 @@
     android:orientation="vertical"
     tools:context=".Order.OrderActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_menu"
-        android:background="#FF9800"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|center_horizontal"
-                android:text="E-Rental "
-                android:textColor="@color/white"
-                android:textSize="@dimen/_17sdp"
-                android:textStyle="bold" />
-
-
-        </LinearLayout>
-    </androidx.appcompat.widget.Toolbar>
+    <include
+        layout="@layout/toolbar_second"
+        android:id="@+id/toolbar"/>
 
 
 
@@ -77,13 +57,14 @@
         android:layout_marginLeft="@dimen/_5sdp"
         android:weightSum="2">
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tanggal_awal"
             android:textSize="@dimen/_15sdp"
             />
         <TextView
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Banyak Sewa"
             android:textColor="@color/black"
             android:layout_weight="1"/>
